# aintegrate

./: CMakeLists.txt  functions.h  mpi_farm.cpp  mpi_tbb.cpp  sequential.cpp  tbb.cpp
cmake_find/: FindTBB.cmake
src/: CMakeLists.txt
src/integrate/: CMakeLists.txt  Integrate.cpp  Integrate.h
src/method/: CMakeLists.txt  IntegrationMethod.cpp  IntegrationMethod.h
src/method/mpi_farm/: CMakeLists.txt  Farm.cpp  Farm.h  MPIFarmMethod.cpp  MPIFarmMethod.h  Worker.cpp  Worker.h
src/method/mpi_tbb/: CMakeLists.txt  MPI_TBBMethod.cpp  MPI_TBBMethod.h
src/method/sequential/: CMakeLists.txt  SequentialMethod.cpp  SequentialMethod.h
src/method/tbb/: CMakeLists.txt  TBBMethod.cpp  TBBMethod.h
src/timer/: CMakeLists.txt  Timer.cpp  Timer.h
src/utils/: CMakeLists.txt  ParametersReader.cpp  ParametersReader.h
